# butbul-halacha-ingest

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGES_DATA_DIRECTORY.md  DAY_OF_WEEK_FEATURE.md  METADATA_EXTRACTION.md  MIGRATION_QUICKSTART.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  REORGANIZATION.md  alembic.ini  pyproject.toml  run.py  schema.sql  videos_backup.json
agent-summaries/: IMPLEMENTATION_SUMMARY.md  METADATA_FEATURE_SUMMARY.md  MIGRATIONS.md  PIPELINE.md  QUICK_REFERENCE.md  REORGANIZATION.md
alembic/: env.py
alembic/versions/: 4d9669060f11_initial_migration_with_video_table.py  5cdf4eb091b7_add_day_of_week_to_video_metadata.py  70925cd08f55_add_transcription_segments_table.py  744d231300b3_add_transcripts_table.py  91cf6fe6caa1_add_unique_constraint_to_transcription_.py  a945124197ab_add_duration_seconds_to_videos.py  b3f1c9d2e7a8_alter_timestamps_to_timestamptz.py  d2f3b7c1e9a1_create_transcription_chunks_table.py  (+9 more)
docs/: BUGS.md  CONFIGURATION.md  STEP1_INGESTION.md
research/: butbul_halacha_find_categories.ipynb
scripts/: configure_anon_readonly.py
src/: __init__.py  cli.py  config.py  database.py  embedding_service.py  hebrew_date_utils.py  import_from_json.py  ingest_videos.py  ingest_videos_v2.py  main.py  show_summary.py  test_db.py  test_youtube.py  transcript_service.py  youtube_service.py
tests/: __init__.py  test_chunks.py  test_config.py  test_database.py  test_day_of_week.py  test_embedding_pipeline.py  test_embedding_schema.py  test_embedding_service.py  test_extraction.py  test_main.py  test_youtube_service.py
(+12 files in other folders)
